new raw files fron tx

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -65,6 +65,7 @@ es:
   successful sign-in:                           "Iniciado sesión como %{user}!"
   successful sign-out:                          "Cerrada la sesión!"
   invalid login:                                "Nombre de usuario o contraseña no válido"
+  invalid password:                             "Contraseña Incorrecta"
   sign out:                                     "Sign out"
   youversion:                                   "YouVersion"
   username or email prompt:                     "Nombre de Usuario (o correo electrónico)"
@@ -210,6 +211,11 @@ es:
     edit notifications:                         "Gestionar Notificaciones"
     edit connections:                           "Cuentas Conectadas"
     edit devices:                               "Dispositivos Conectados"
+    edit account_existence:                     "Eliminar Cuenta"
+    delete account button:                      "Eliminar Mi Cuenta de YouVersion"
+    yes delete:                                 "Si, Eliminar Mi Cuenta"
+    account delete success:                     "Su cuenta de YouVersion ha sido exitosamente eliminada.  Anhelamos que continúe encontrando formas significativas a su vida para interactuar con la Biblia.  Algunas de las siguientes aplicaciones podrían serle de mucha ayuda en su crecimiento y relación con Dios: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    delete account description:                 "Si elimina su cuenta, estará permanentemente eliminando toda su información, historial, y personalizaciones en YouVersion.com y la Biblia App, tales como, notas, marcadores, resaltados, etc.  Esta acción no puede ser revertida por usted o nuestro equipo.  Si está seguro de continuar, proceda como indicado a continuación. "
     user recent activity:                       "%{user}'s Actividad Reciente"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}Notas"
@@ -229,6 +235,7 @@ es:
     confirm update email error:                 "Lo sentimos, hubo un problema al completar su cambio de dirección de correo electrónico."
     account confirmed:                          "Your account has been confirmed!"
     invalid email forgot:                       "Lo sentimos, no logramos encontrar una cuenta con esa dirección de correo electrónico. Por favor inténtelo de nuevo."
+    error deleting account:                     "Lo sentimos.  Hubo un problema desde su ubicación. Por favor inténtelo de nuevo ó comuníquese con Soporte Técnico."
     send new password button:                   "Enviar una nueva contraseña"
     forgot password copy:                       "Introduzca su dirección de correo electrónico y haga clic en Enviar Nueva Contraseña, y nosotros le enviaremos una nueva contraseña por correo electrónico."
     forgot password check:                      "¡Felicidades! Revise su correo electrónico para su nueva contraseña."
@@ -354,6 +361,7 @@ es:
       newsletter:                               "Informarme sobre las actualizaciones y anuncios de YouVersion."
       note_like:                                "Notificarme cuando a alguien le gusten mis notas"
       reading_plans:                            "Notificarme con información sobre los Planes de Lectura que haya iniciado"
+      publishing partners:                      "Mantenerme informado enviándome noticias/información de los socios de contenido de YouVersion."
       update:                                   "Actualizar Notificaciones"
   bookmarks:
     edit:                                       "Editar"
