--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -361,6 +361,7 @@ ja:
       newsletter:                               "YouVersion からの最新情報を受信する"
       note_like:                                "私のノートがお気に入りに追加されたら通知を受ける"
       reading_plans:                            "利用中の読書プランに関する情報の通知を受ける"
+      publishing partners:                      "YouVersionのコンテンツパートナーからのニュースを受け取る"
       update:                                   "通知設定の更新"
   bookmarks:
     edit:                                       "編集"
