--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -57,7 +57,7 @@ km:
   my notifications:                             "គ្រប់​គ្រងការ​ដាស់​តឿន"
   my connections:                               "បាន​ភ្ជាប់​ទៅ​គណនី"
   my devices:                                   "បាន​ភ្ជាប់​ជាមួយ​ឧបករណ៍"
-  language name:                                "មែរ"
+  language name:                                "អង់​គ្លេស"
   sign in:                                      "Sign in"
   sign up:                                      "ចុះ​ឈ្មោះ​"
   have an account:                              "មាន​គណនី​រួច​ហើយ​?"
@@ -65,7 +65,7 @@ km:
   successful sign-in:                           "ចុះ​ឈ្មោះ​ចូល​ជា %{user}!"
   successful sign-out:                          "ចាក​ចេញ"
   invalid login:                                "ឈ្មោះ​អ្នក​ប្រើ​ប្រាស់ ឬ​ពាក្យ​សម្ងាត់​មិន​ត្រឹម​ត្រូវ"
-  invalid password:                             "Incorrect Password"
+  invalid password:                             "ពាក្យ​សម្ងាត់​មិន​ត្រឹម​ត្រូវ"
   sign out:                                     "Sign out"
   youversion:                                   "YouVersion"
   username or email prompt:                     "ឈ្មោះ​ប្រើ​ប្រាស់ (ឬ អ៊ី​ម៉ែល)"
@@ -211,9 +211,9 @@ km:
     edit notifications:                         "គ្រប់​គ្រងការ​ដាស់​តឿន"
     edit connections:                           "បាន​ភ្ជាប់​ទៅ​គណនី"
     edit devices:                               "បាន​ភ្ជាប់​ជាមួយ​ឧបករណ៍"
-    edit account_existence:                     "Delete Account"
-    delete account button:                      "Delete My YouVersion Account"
-    yes delete:                                 "Yes, Delete My Account"
+    edit account_existence:                     "លុប​គណនី"
+    delete account button:                      "លុប​គណនី​ YouVersion របស់​ខ្ញុំ"
+    yes delete:                                 "បាទ/ចា៎ លុប​គណនី​របស់ខ្ញុំ"
     account delete success:                     "Your YouVersion account has been successfully deleted. We hope you continue to find meaningful ways to interact with the Bible. Some of these apps might be helpful as you move forward: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description:                 "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within YouVersion.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
     user recent activity:                       "%{user} សកម្ម​ភាព​ថ្មីៗ"
@@ -235,7 +235,7 @@ km:
     confirm update email error:                 "សូម​ទោស មាន​បញ្ហា​ក្នុង​ការ​បញ្ចប់​ការ​ប្ដូរ​អាស័យដ្ឋាន​អ៊ី​ម៉ែល​របស់​អ្នក។"
     account confirmed:                          "គណនី​របស់​អ្នក​ត្រូវ​បាន​បញ្ជាក់​រួច​ហើយ!"
     invalid email forgot:                       "សូម​ទោស យើង​មិន​អាច​រក​គណនី​ដែល​មានអាស័យ​ដ្ឋាន​​អ៊ី​ម៉ែល​នេះ​ទេ សូម​សាកល្បង​ម្ដង​ទៀត"
-    error deleting account:                     "Sorry, there was a problem on our end. Please try again or contact support."
+    error deleting account:                     "សូម​ទោស​ មាន​កំហុស​មួយ​ចំនូន​នៅ​ផ្នែក​ខាង​យើង។ សូម​សាក​ល្បង​ម្ដង​ទៀត ឬ​ទាក់​ទង​មក​ក្រុម​ជំនួយ​របស់​យើង។"
     send new password button:                   "ផ្ញើរ​ពាក្យ​សម្ងាត់​ថ្មី"
     forgot password copy:                       "សូម​បញ្ចូល​អាស័យ​ដ្ឋាន​អ៊ី​ម៉ែល​របស់​អ្នក រួច​ចុច ផ្ញើរ​ពាក្យ​សម្ងាត់​ថ្មី នោះ​យើង​នឹង​ផ្ញើរ​ពាក្យ​សម្ងាត់​ថ្មី​មួយ​មក​អ្នក​វិញ"
     forgot password check:                      "ជោគ​ជ័យ! សូម​ឆែក​អ៊ី​ម៉ែលរបស់​អ្នក​ដើម្បី​មើល​ពាក្យ​សម្ងាត់​ថ្មី​របស់​អ្នក"
@@ -303,9 +303,9 @@ km:
       indemnity text:                           "You agree to indemnify and hold LifeChurch.tv and its subsidiaries, affiliates, officers, agents, employees, partners and licensors harmless from any claim or demand, including reasonable attorneys' fees, made by any third party due to or arising out of Content you submit, post, transmit or otherwise make available through YouVersion, your use of YouVersion, your connection to YouVersion, your violation of the TERMS OF USE, or your violation of any rights of another. You expressly understand and agree that LifeChurch.tv and its subsidiaries, affiliates, officers, employees, agents, partners and licensors make no warranty that: %{item}(i) YouVersion will meet your requirements; %{item}(ii) YouVersion will be uninterrupted, timely, secure or error-free; and %{item}(iii) the results that may be obtained from the use of YouVersion will be accurate or reliable. Under no circumstances will LifeChurch.tv be liable in any way for any loss or damage of any kind incurred as a result of the use of any Content made available via YouVersion.%{line_break}You expressly understand and agree that any material downloaded or otherwise obtained through the use of YouVersion is accessed at your own discretion and risk, and you will be solely responsible for any damage to your computer system or loss of data that results from the download of any such material.%{line_break}You expressly understand and agree that a small percentage of users may experience epileptic seizures when exposed to certain light patterns or backgrounds on a computer screen or while using YouVersion, for which LifeChurch.tv is not responsible. Certain conditions may induce previously undetected epileptic symptoms even in users who have no history of prior seizures or epilepsy. If you, or anyone in your family, have an epileptic condition, consult your physician prior to using You Version. Immediately discontinue use of YouVersion and consult your physician if you experience any of the following symptoms while using YouVersion: dizziness, altered vision, eye or muscle twitches, loss of awareness, disorientation, any involuntary movement, or convulsions."
       resale title:                             "មិន​មាន​ការ​លក់​សេវាកម្ម​នេះឡើង​វិញទេ"
       resale text:                              "លោក​អ្នក​យល់​ព្រម​ថា​នឹង​មិន​ផលិត, ចម្លង, លក់, ផ្លាស់​ប្ដូរ, លក់​ឡើង​វិញ ឬ​ពន្លើស​ក្នុង​គោល​បំណង​ពានិជ្ជកម្ម ក្នុង​ផ្នែក​ណាមួយ​នៃYouVersion(រួម​បញ្ចូល​ទាំង LifeChurc.tv​ ID), ក្នុង​ការ​ប្រើ​ប្រាស់ YouVersion, ឬ​ចូល​ទៅ​កាន់ YouVersion."
-      storage title:                            "General Practices Regarding Use and Storage"
+      storage title:                            "ការ​ប្រើ​ប្រាស់​ទូ​ទៅ ទាក់​ទង​នឹង ការ​ប្រើ​ប្រាស់ និង​ការ​ផ្ទុក"
       storage text:                             "You acknowledge that LifeChurch.tv may establish, and modify from time to time, general practices and limits concerning the use of YouVersion, including without limitation the maximum number of days that Content will be retained by YouVersion. You agree that LifeChurch.tv has no responsibility or liability for the deletion of or failure to store any Content maintained or transmitted by YouVersion. You acknowledge that LifeChurch.tv reserves the right, at its sole discretion, to log off and completely remove accounts that remain inactive for an extended period of time."
-      modifications title:                      "Modifications to Service"
+      modifications title:                      "កំណែរ​ទម្រង់​លើ​សេវាកម្ម"
       modifications text:                       "LifeChurch.tv reserves the right at any time and from time to time to modify or discontinue, temporarily or permanently, YouVersion (or any part thereof) with or without notice. You agree that LifeChurch.tv shall not be liable to you or to any third party for any modification, suspension or discontinuance of YouVersion."
       termination title:                        "ការ​បញ្ចប់"
       termination text:                         "You agree that LifeChurch.tv may, under certain circumstances and without prior notice, at its sole discretion, immediately terminate your LifeChurch.tv account and access to YouVersion at any time and for any reason, and shall not be liable to you or any third party for any termination of your account or access to YouVersion."
@@ -361,6 +361,7 @@ km:
       newsletter:                               "សូម​ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពេល​មាន​ដំណឹង​ថ្មីៗ​ពី YouVersion"
       note_like:                                "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពេល​មាន​អ្នក​ចូល​ចិត្ត​កំណត់​ត្រា​របស់​ខ្ញុំ"
       reading_plans:                            "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពី​ព័ត៌មាន​សំរាប់​គំរោង​អាន​ដែល​ខ្ញុំ​បាន​ចាប់​ផ្ដើម។"
+      publishing partners:                      "ជួយ​ប្រាប់​តំណឹង​ដល់​ខ្ញុំ​ពេល​មាន​ការ​បន្ទាន់​សម័យ​ពី មាតិការ​ដៃ​គូរ​របស់ YouVersion"
       update:                                   "បន្ទាន់សម័យ​ការ​ប្រាប់​ដំណឹង"
   bookmarks:
     edit:                                       "កែសម្រួល"
