--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -65,6 +65,7 @@ nl:
   successful sign-in:                           "Aangemeld als %{user}!"
   successful sign-out:                          "Afgemeld!"
   invalid login:                                "Ongeldige gebruikersnaam of wachtwoord"
+  invalid password:                             "Verkeerd Wachtwoord"
   sign out:                                     "Sign out"
   youversion:                                   "YouVersion"
   username or email prompt:                     "Gebruikersnaam (of email):"
@@ -210,6 +211,11 @@ nl:
     edit notifications:                         "Beheer van Meldingen"
     edit connections:                           "Verbonden Accounts"
     edit devices:                               "Verbonden Apparaten"
+    edit account_existence:                     "Verwijder Account"
+    delete account button:                      "Verwijder Mijn YouVersion Account"
+    yes delete:                                 "Ja, verwijder Mijn Account"
+    account delete success:                     "Uw YouVersion account is succesvol verwijderd. We hopen dat u nog steeds op zinvolle wijze interactie met de Bijbel heeft. Enkele van deze apps zouden u kunnen helpen wanneer u progressie boekt.: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    delete account description:                 "Wanneer u uw account verwijdert, verwijdert u blijvend al uw informatie, geschiedenis, en personalisatie (zoals aantekeningen, bladwijzers, markeringen, etc.) op YouVersion.com en de Bijbel App. Deze daad kan niet ongedaan worden gemaakr door u of door ons team. Indien u er zeker van bent dat u door wilt gaan, ga onderaan verder."
     user recent activity:                       "%{user}`s Recente Activiteit"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}`s Notities"
@@ -229,6 +235,7 @@ nl:
     confirm update email error:                 "Sorry, er was een probleem met het voltooien van je e-mail adres wijziging."
     account confirmed:                          "Uw account is bevestigd!"
     invalid email forgot:                       "Sorry, we konden geen account vinden onder dat e-mail adres. Probeer het opnieuw."
+    error deleting account:                     "Sorry, er was een probleem aan onze kant. Probeer het opnieuw of neem contact op met de support."
     send new password button:                   "Nieuw Wachtwoord Sturen"
     forgot password copy:                       "Typ je e-mail adres in en klik op Nieuw Wachtwoord Sturen, en we zullen je een nieuw wachtwoord sturen."
     forgot password check:                      "Gelukt! Check je e-mail voor je nieuwe wachtwoord."
@@ -354,6 +361,7 @@ nl:
       newsletter:                               "Houd mij op de hoogte over aankondigingen van YouVersion."
       note_like:                                "Laat me weten wanneer iemand mijn notities leuk vindt."
       reading_plans:                            "Laat me weten als er informatie is voor de leesplannen die ik ben begonnen."
+      publishing partners:                      "Hou me op de hoogte van nieuws over YouVersion's inhoudelijke parners."
       update:                                   "Update Mededelingen"
   bookmarks:
     edit:                                       "Bewerk"
