--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -1,5 +1,5 @@
 ---
-"no":
+no:
   link:                                         "Lenke"
   site search:                                  "YouVersion-søk"
   auth error:                                   "Det oppstod et problem med ditt brukernavn eller passord. Logg inn på YouVersion for å fortsette."
@@ -65,6 +65,7 @@
   successful sign-in:                           "Logget inn som %{user}!"
   successful sign-out:                          "Logget ut!"
   invalid login:                                "Ugyldig brukernavn eller passord"
+  invalid password:                             "Feil passord"
   sign out:                                     "Sign out"
   youversion:                                   "YouVersion"
   username or email prompt:                     "Brukernavn (eller e-post):"
@@ -126,7 +127,7 @@
     like button text:                           "Lik"
     unlike button text:                         "Ikke lik"
   notes:
-    loading community:                          "Loading community notes..."
+    loading community:                          "Laster notater fra fellesskap..."
     public:                                     "Offentlig"
     private:                                    "Privat"
     draft:                                      "Utkast"
@@ -153,7 +154,7 @@
     notes i like:                               "Notater jeg liker"
     none found:                                 "No notes found..."
     see my likes:                               "Se alt jeg liker"
-    successfully deleted:                       "Note Removed"
+    successfully deleted:                       "Notat slettet"
   ref:
     clear verses:                               "Nullstill valgte vers"
     choose book and chapter:                    "Velg bok + kapittel"
@@ -210,6 +211,11 @@
     edit notifications:                         "Varslingsinnstillinger"
     edit connections:                           "Tilknyttede kontoer"
     edit devices:                               "Tilknyttede enheter"
+    edit account_existence:                     "Slett brukerkonto"
+    delete account button:                      "Slett min YouVersion-konto"
+    yes delete:                                 "Ja, slett min brukerkonto"
+    account delete success:                     "Din YouVersion-konto har blitt slettet. Vi håper du fortsatt vil finne menigsfulle måter å benytte Bibelen. Noen av disse app'ene kan være nyttige for deg videre: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    delete account description:                 "Hvis du sletter kontoen din vil du permanent fjene all informasjon, historikk og tilpasninger (som notater, bokmerker, uthevinger osv) både på YouVersion.com og i Bibel-appen. Dette kan ikke gjenopprettes av deg eller vårt team. Hvis du er sikker på at du ønsker å gå videre, fortsett nedenfor."
     user recent activity:                       "%{user}s nylige aktivitet"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}s notater"
@@ -229,6 +235,7 @@
     confirm update email error:                 "Beklager, det oppsto et problem og epost-adressen din ble ikke endret."
     account confirmed:                          "Your account has been confirmed!"
     invalid email forgot:                       "Beklager, men vi kunne ikke finne noen konto med den epost-adressen. Vennligst prøv igjen."
+    error deleting account:                     "Beklager, det var en feil i vår ende. Vennligst prøv igjen eller kontakt support."
     send new password button:                   "Send nytt passord"
     forgot password copy:                       "Skriv inn epost-adressen din og klikk Send nytt passord, så sender vi deg et nytt passord."
     forgot password check:                      "Vellykket! Sjekk eposten din og finn ditt nye passord."
@@ -354,10 +361,11 @@
       newsletter:                               "Hold meg oppdatert på meldinger fra YouVersion."
       note_like:                                "Varsle meg når noen liker mine notater."
       reading_plans:                            "Varsle meg om informasjon for leseplaner jeg følger."
+      publishing partners:                      "Hold meg oppdatert om nyheter fra YouVersions partnere."
       update:                                   "Oppdater varslinger"
   bookmarks:
     edit:                                       "Rediger"
-    delete:                                     "Delete this Bookmark"
+    delete:                                     "Slett dette bokmerket"
     title field:                                "Tittel"
     lables:                                     "Emner"
     all:                                        "Alle"
@@ -376,10 +384,10 @@
     user badges:                                "%{user}s merker"
   plans:
     title:                                      "Leseplaner"
-    browse by category:                         "Browse by Category"
+    browse by category:                         "Ordne etter kategori"
     browse plans:                               "Utforsk planer for %{category}"
-    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
-    showing language filtered:                  "Only showing plans available in %{lang_name}"
+    swap list localization:                     "(<a href='%{swap_link}'>Vis i %{swap_locale}</a>)"
+    showing language filtered:                  "Viser kun planer tilgjengelig på %{lang_name}"
     all:                                        "Alle"
     all plans:                                  "Alle planer"
     all category plans:                         "Alle planer for %{category}"
@@ -412,7 +420,7 @@
     reading completed _ mark and show next:     "Next: %{next_reference}"
     which reading:                              "%{current} av %{total}"
     done reading:                               "Ferdig"
-    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
+    no content:                                 "Planen din har ikke noe innhold i dag, så den er markert som fullført."
     read today:                                 "Vis dagens lesing"
     completion status _ below percentage:       "Complete"
     current progress html:                      "Dag <b>%{day}</b> av <b>%{total_days}</b>"
@@ -492,7 +500,7 @@
     all versions:                               "Alle %{language_name} oversettelser"
   donate:
     donate now:                                 "Gi nå"
-    donate now intl:                            "or donate internationally"
+    donate now intl:                            "eller gi internasjonalt"
     promo 1:                                    "For hver 1$ du gir vil 10 personer få tilgang til Bibelen på sin mobiltelefon."
     promo 2:                                    "Med YouVersion er Bibelen alltid i nærheten. Se vår video."
     promo 3:                                    "I år vil over fem milliarder mennesker bruke en mobiltelefon. Gi nå."
@@ -583,14 +591,14 @@
       our action:                               "We've been notified about this and will jump on it as soon as possible."
   shared:
     menu_settings:
-        title:                                  "Your Settings"
+        title:                                  "Dine innstillinger"
         close:                                  "Lukk"
         font:                                   "Font:"
         font1:                                  "Helvetica"
         font2:                                  "Georgia"
         font3:                                  "Baskerville"
         font4:                                  "Verdana"
-        font size:                              "Size:"
+        font size:                              "Størrelse:"
         small:                                  "Liten"
         medium:                                 "Medium"
         large:                                  "Stor"
