--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -65,6 +65,7 @@ pl:
   successful sign-in:                           "Jesteś zalagowany jako %{user}!"
   successful sign-out:                          "Wylogowałeś się!"
   invalid login:                                "Nieprawidłowa nazwa lub hasło"
+  invalid password:                             "Incorrect Password"
   sign out:                                     "Sign out"
   youversion:                                   "YouVersion"
   username or email prompt:                     "Nazwa użytkownika (lub e-mail):"
@@ -210,6 +211,11 @@ pl:
     edit notifications:                         "Zarządzaj powiadomieniami"
     edit connections:                           "Połączone konta"
     edit devices:                               "Połączone urządzenia"
+    edit account_existence:                     "Delete Account"
+    delete account button:                      "Delete My YouVersion Account"
+    yes delete:                                 "Yes, Delete My Account"
+    account delete success:                     "Your YouVersion account has been successfully deleted. We hope you continue to find meaningful ways to interact with the Bible. Some of these apps might be helpful as you move forward: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    delete account description:                 "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within YouVersion.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
     user recent activity:                       "Ostatnia aktywność użytkownika %{user}"
     my notes:                                   "My Notes"
     user notes:                                 "Notatki użytkownika %{user}"
@@ -229,6 +235,7 @@ pl:
     confirm update email error:                 "Niestety, pojawił się problem przy zmianie twojego adresu e-mail."
     account confirmed:                          "Your account has been confirmed!"
     invalid email forgot:                       "Niestety, nie mogliśmy znaleźć konta z podanym adresem e-mail. Spróbuj ponownie."
+    error deleting account:                     "Sorry, there was a problem on our end. Please try again or contact support."
     send new password button:                   "Wyślij nowe hasło"
     forgot password copy:                       "Wprowadź swój adres e-mail i kliknij Wyślij nowe hasło, a my wyślemy ci nowe hasło."
     forgot password check:                      "Sprawdź swoją skrzynkę, aby ustawić nowe hasło."
@@ -354,6 +361,7 @@ pl:
       newsletter:                               "Powiadamiaj mnie o ogłoszeniach YouVersion."
       note_like:                                "Powiadamiaj mnie, gdy ktoś polubi moje notatki."
       reading_plans:                            "Powiadamiaj mnie o informacjach dotyczących planów czytania, które rozpocząłem."
+      publishing partners:                      "Keep me updated on news from YouVersion's content partners."
       update:                                   "Powiadomienia o akutalizacji"
   bookmarks:
     edit:                                       "Edytuj"
@@ -414,7 +422,7 @@ pl:
     done reading:                               "Wykonane"
     no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
     read today:                                 "Zobacz dzisiejszy fragment"
-    completion status _ below percentage:       "Complete"
+    completion status _ below percentage:       "Ukończony"
     current progress html:                      "Dzień <b>%{day}</b> z <b>%{total_days}</b>"
     start date _ before date string:            "Data rozpoczęcia:"
     end date _ before date string:              "Data zakończenia:"
