--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -361,6 +361,7 @@ ru:
       newsletter:                               "Держать меня в курсе объявлений от YouVersion."
       note_like:                                "Уведомлять меня, когда кому-то нравятся мои заметки."
       reading_plans:                            "Уведомлять меня о начатых мною планах чтения."
+      publishing partners:                      "Держать меня в курсе новостей от партнёров YouVersion"
       update:                                   "Сохранить"
   bookmarks:
     edit:                                       "Редактировать"
