--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -65,6 +65,7 @@ sv:
   successful sign-in:                           "Inloggad som %{user}!"
   successful sign-out:                          "Utloggad!"
   invalid login:                                "Ogiltigt användarnamn och lösenord"
+  invalid password:                             "Felaktigt lösenord"
   sign out:                                     "Sign out"
   youversion:                                   "YouVersion"
   username or email prompt:                     "Användarnamn (eller e-post)"
@@ -210,6 +211,11 @@ sv:
     edit notifications:                         "Hantera meddelanden"
     edit connections:                           "Anslutna konton"
     edit devices:                               "Anslutna enheter"
+    edit account_existence:                     "Ta bort konto"
+    delete account button:                      "Ta bort mitt YouVersion-konto"
+    yes delete:                                 "Ja, ta bort mitt konto"
+    account delete success:                     "Ditt YouVersion-konto har tagits bort. Vi hoppas att du fortsätter att hitta meningsfulla sätt att komma i kontakt med Bibeln. Några av dessa appar kanske kan hjälpa dig att komma framåt: <a href= http://www.youversion.com/sv/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    delete account description:                 "Om du tar bort ditt konto kommer du permanent radera all din information, historia och anpassning (som t.ex. anteckningar, bokmärken, markeringar etc.) på YouVersion.com och i Bibelappen. Detta kan inte återställas av dig eller av vårt team. Om du är säker på att du vill fortsätta, gå vidare nedan."
     user recent activity:                       "%{user}s senaste aktivitet"
     my notes:                                   "My Notes"
     user notes:                                 "%{user}s anteckningar"
@@ -229,6 +235,7 @@ sv:
     confirm update email error:                 "Det uppstod ett problem vid försök att fullfölja din ändring av e-postadress."
     account confirmed:                          "Ditt konto har verifierats!"
     invalid email forgot:                       "Vi kunde inte hitta ett konto med denna e-postadress. Försök igen."
+    error deleting account:                     "Det uppstod ett problem hos oss. Försök igen eller kontakta support."
     send new password button:                   "Skicka nytt lösenord"
     forgot password copy:                       "Ange din e-postadress och klicka Skicka nytt lösenord, så skickar vi dig ett nytt lösenord."
     forgot password check:                      "Lyckades! Kontrollera din e-post för ditt nya lösenord."
@@ -354,6 +361,7 @@ sv:
       newsletter:                               "Håll mig uppdaterad om tillkännagivanden från YouVersion."
       note_like:                                "Meddela mig när någon gillar mina anteckningar."
       reading_plans:                            "Meddela mig med information för läsplaner jag startat."
+      publishing partners:                      "Håll mig uppdaterad om nyheter från YouVersions innehållspartner"
       update:                                   "Uppdateringsmeddelanden"
   bookmarks:
     edit:                                       "Ändra"
