--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -361,6 +361,7 @@ en-GB:
       newsletter:                               "Keep me updated on YouVersion announcements."
       note_like:                                "Notify me when someone likes my notes."
       reading_plans:                            "Notify me about information for reading plans I've started."
+      publishing partners:                      "Keep me updated on news from YouVersion's content partners."
       update:                                   "Update Notifications"
   bookmarks:
     edit:                                       "Edit"
