--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -361,6 +361,7 @@ ko:
       newsletter:                               "유버전 신규 공지사항 수신하기"
       note_like:                                "내 노트를 좋아하는 사람이 있을 때 알림"
       reading_plans:                            "시작한 읽기 계획에 대한 상세정보 알림"
+      publishing partners:                      "Keep me updated on news from YouVersion's content partners."
       update:                                   "업데이트 알림"
   bookmarks:
     edit:                                       "편집"
