--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -211,11 +211,12 @@ zh-TW:
     edit notifications:                         "管理通知"
     edit connections:                           "連接的帳號"
     edit devices:                               "連接的設備"
-    edit account_existence:                     "Delete Account"
-    delete account button:                      "Delete My YouVersion Account"
-    yes delete:                                 "Yes, Delete My Account"
-    account delete success:                     "Your YouVersion account has been successfully deleted. We hope you continue to find meaningful ways to interact with the Bible. Some of these apps might be helpful as you move forward: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-    delete account description:                 "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within YouVersion.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
+    edit account_existence:                     "刪除帳號"
+    delete account button:                      "刪除我的YouVersion帳號"
+    yes delete:                                 "是的，刪除我的帳號"
+    account delete success:                     "您的YouVersion帳號已經成功被刪除了。我們希望您能繼續尋找有意義的方式來與聖經連接。在您要離開之前，請考慮以下也許會有幫助的應用程序：<a href=
+http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    delete account description:                 "如果您刪除帳號，您將徹底刪除您在YouVersion網站和聖經軟體上的個人資料、讀經歷史和自訂化的資訊 (比如筆記、書籤、反白顯示等等)。請切記這個行動是您或者我們都不能逆轉的。如果您確定要刪除帳號，請在下方進行。"
     user recent activity:                       "%{user}的近期活動"
     my notes:                                   "My Notes"
     user notes:                                 "%{user} 的筆記"
@@ -235,7 +236,7 @@ zh-TW:
     confirm update email error:                 "抱歉，無法更改您的電子郵件地址。"
     account confirmed:                          "這個帳號已經被確認了。"
     invalid email forgot:                       "抱歉，沒有找到與該電子郵件地址相關聯的帳號，請再試一次。"
-    error deleting account:                     "Sorry, there was a problem on our end. Please try again or contact support."
+    error deleting account:                     "抱歉，我們這方面出了個問題。請重試或者聯絡我們的技術支援。"
     send new password button:                   "發送新的密碼"
     forgot password copy:                       "輸入您的電子郵件地址並點選『發送新密碼』，我們將會寄給您一個新密碼。"
     forgot password check:                      "成功了！請進入您的電子郵件查看您的新密碼。"
@@ -361,6 +362,7 @@ zh-TW:
       newsletter:                               "通知我有關YouVersion的公告"
       note_like:                                "當有人喜歡我的筆記時通知我。"
       reading_plans:                            "通知我有關於我已經開始的讀經計劃的資訊。"
+      publishing partners:                      "請通知我YouVersion內容夥伴的消息更新。"
       update:                                   "更新通知"
   bookmarks:
     edit:                                       "編輯"
