--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -554,8 +554,10 @@ en:
     information revolution copy:                "Over the last decade, the Internet has brought about a revolution which empowers people like never before. With the ability to share, contribute, create, broadcast and communicate, it's easy to express who we are and what we believe with the rest of the world."
     youversion copy:                            "Since its start in 1996, LifeChurch.tv's purpose has been to lead people to become fully devoted followers of Christ. In doing so, we have looked for new ways to help people connect the Bible to their daily lives. Our methods have changed over the years as we've incorporated various technologies and strategies. But at the core, our focus remains on relevancy as we consistently strive to demonstrate and teach people how God's Word relates to everyone, no matter where they are in life."
     youversion copy 2:                          "YouVersion represents a new frontier in LifeChurch.tv's efforts. We aren't just building a tool to impact the world using innovative technology, more importantly, we are engaging people into relationships with God as they discover the relevance the Bible has for their lives."
-    partners title:                             "A Special Thanks to Our Partners"
+    partners title:                             "Bible Publishing Partners"
+    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Our Translation Teams"
+    learn more:                                 "Learn More"
   press page:
     title:                                      "Press Area"
     contact header:                             "Press Contact Information"
